# AudioVideo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mnist.tflite  mnist.txt
app/src/main/jni/: CMakeLists.txt  common.h  log.h  native-lib.c  yuv.c
app/src/main/jni/libyuv/: CMakeLists.txt  libyuv.cpp
app/src/main/res/layout/: activity_audio.xml  activity_camera.xml  activity_main.xml  activity_media_muxer.xml  activity_opengl.xml  activity_screen.xml
gradle/wrapper/: gradle-wrapper.properties
kotlinapp/: build.gradle
kotlinapp/src/main/: AndroidManifest.xml
libface/: build.gradle
libface/src/main/: AndroidManifest.xml
libface/src/main/jni/: CMakeLists.txt  facedetect.cpp  facelandmarker.cpp
libface/src/main/jni/FaceDetector/: FaceDetector.cpp  FaceDetector.h  FaceDetectorPrivate.cpp  FaceDetectorPrivate.h
libface/src/main/jni/FaceLandmarker/: FaceLandmarker.cpp  FaceLandmarker.h  FaceLandmarkerPrivate.h
libface/src/main/jni/FaceRecognizer/: FaceRecognizer.cpp  FaceRecognizer.h  FaceRecognizerPrivate.cpp  FaceRecognizerPrivate.h
libface/src/main/jni/Seeta/: FaceDatabase.cpp  FaceDatabase.h
libface/src/main/jni/SeetaNet/src/: SeetaNet.cpp
libface/src/main/jni/SeetaNet/src/include_inner/: SeetaNetCreateLayerDetailCPU.h
libtflite/: build.gradle
libtflite/src/main/: AndroidManifest.xml
libyuv/: build.gradle
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/jni/: CMakeLists.txt  libyuv.cpp
(+74 files in other folders)
